--- a/java/Coffee Machine/Coffee Machine/Machines have needs/task-info.yaml
+++ b/java/Coffee Machine/Coffee Machine/Machines have needs/task-info.yaml
@@ -121,5 +121,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/33/stages/176/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/33/stages/176/implement">JetBrains
+    Academy</a>
+  time: Mon, 10 Aug 2020 03:57:45 UTC
 record: -1
