--- a/java/Coffee Machine/Coffee Machine/Enough coffee for everyone/task-info.yaml
+++ b/java/Coffee Machine/Coffee Machine/Enough coffee for everyone/task-info.yaml
@@ -182,5 +182,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/33/stages/177/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/33/stages/177/implement">JetBrains
+    Academy</a>
+  time: Mon, 10 Aug 2020 15:35:22 UTC
 record: -1
