--- a/java/Coffee Machine/Coffee Machine/Action!/task-info.yaml
+++ b/java/Coffee Machine/Coffee Machine/Action!/task-info.yaml
@@ -366,5 +366,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/33/stages/178/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/33/stages/178/implement">JetBrains
+    Academy</a>
+  time: Sun, 23 Aug 2020 23:31:54 UTC
 record: -1
