completed stage five

--- a/java/Coffee Machine/Coffee Machine/On a coffee loop/task-info.yaml
+++ b/java/Coffee Machine/Coffee Machine/On a coffee loop/task-info.yaml
@@ -283,5 +283,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/33/stages/179/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/33/stages/179/implement">JetBrains
+    Academy</a>
+  time: Mon, 24 Aug 2020 04:10:24 UTC
 record: -1
